--- a/lib/layout/default.html
+++ b/lib/layout/default.html
@@ -1,5 +1,8 @@
-<head>
-</head>
-<body>
-  <%= converted %>
-</body>
+<html>
+	<head>
+		<meta charset="utf-8">
+	</head>
+	<body>
+		<%= converted %>
+	</body>
+</html>
