변경한 스타일 적용 안되는 문제를 해결한다
 - 스타일에 정의한 폰트 파일을 가져온다.
 - 바뀐 스타일에 맞게 레이아웃을 변경했다.

--- a/lib/layout/default.html
+++ b/lib/layout/default.html
@@ -1,9 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html lang="ko">
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="./css/main.css">
+		<link rel="stylesheet" href="./css/main.css" type="text/css" media="screen" />
 	</head>
 	<body>
-		<%= converted %>
+		<div class="site">
+			<div class="title">
+			</div>
+			<%= converted %>
+		</div>
 	</body>
 </html>
