--- a/lib/layout/index.html
+++ b/lib/layout/index.html
@@ -2,11 +2,13 @@
 <html lang="ko">
 	<head>
 		<meta charset="utf-8">
+		<title>김세훈</title>
 		<link rel="stylesheet" href="./css/index.css" type="text/css" media="screen" />
 	</head>
 	<body>
 		<div class="site">
 			<div class="title">
+				김세훈
 			</div>
 			<%= converted %>
 		</div>
