blockquote 스타일 수정한다

--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -120,3 +120,9 @@ pre code {
   font-weight: 400;
   white-space: pre-wrap;
 }
+
+blockquote {
+  margin-inline-start: 0.5em;
+  margin-block-start: 0.5em;
+  margin-block-end: 0.5em;
+}
